Cacti CHANGELOG

0.8.7a
-bug#0001068: doc change for patching cacti when running SELinux
-bug#0001066: doc change for using COUNTERs as integers only
-bug#0001029: Add --autoscale-min (rrdtool 1.2.x only) and --autoscale-max (using upper AND lower limit)
-bug#0001035: Allow for --logarithmic scaling without autoscaling
-bug#0001067: Fixed extra spaces in GPRINT. Better Alignment for Autopadding
-bug#0001038: Data sources in RRAs have random order, messing up predefined CDEFs
-bug#0001043: Graph Templates drop down populates with duplicates
-bug#0001046: Upgrade from 0.8.6j to 0.8.7 defaults to Authentication Method NONE
-bug#0001055: Invalid date format - "half hour" not the GNU Date format
-bug#0001057: SQL error when using 'Auth Method' None when no 'guest' user exists
-bug#0001058: Graph Filter dropdowns do not respect user graph permissions
-bug#0001060: RRDtool 1.2.15 complain for garbage characters when rrdtool_function_xport is used
-bug#0001061: cmd.php: potential call to invalid "availability_method" key on wrong hash
-bug#0001064: Log file viewer inefficient filtering uses excess memory
-bug#0001059: Potential SQL injection vulnerability
-bug#0001070: Cron interval detection causes multiple pollers to run
-bug#0001073: Max OIDS is not saved in device view
-bug#0001078: Undefined variable: rra in graph.php on line 241
-bug#0001079: Dates are not stored in host table using correct format
-bug#0001080: Graph Export Generates SQL Errors
-feature#0001035: Allow for --units=si on logarithmic scaled graphs (rrdtool-1.2.x only).
-feature#0001069: add opacity/alpha channel to graph items (rrdtool-1.2.x only).
-feature#0001065: Move to Top for List and Tree View. Omit boring scrolling
-feature: add availability pings to host interface

0.8.7
-bug#0000480: Fix error after altering graphs displayed per page
-bug#0000740: Add support for setting the PHP session name of Cacti
-bug#0000829: Add support for an specifying an uptime OID for SNMP queries